# my-crow-services

./: README.md
flask/: caw.py
go/: murder.go
hs/: hs-murder.cabal
hs/src/: Main.hs
nim/: .gitignore  murder.nim  murder.nimble
node/: package.json  server.js  spec.js
rs-nickel/: Cargo.toml
rs-nickel/src/: main.rs
sinatra/: Gemfile  murder.rb
trot/: README.md  mix.exs
trot/config/: config.exs
trot/lib/: elixir_caw.ex
trot/test/: elixir_caw_test.exs
