name:                hs-murder
version:             0.1.0.0
synopsis:            service to generate caws
homepage:            https://github.com/barbeque/my-crow-services
license:             BSD3
license-file:        LICENSE
author:              mike stedman
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-murder
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       aeson
